added another paper

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -627,6 +627,21 @@
   timestamp = {2017.06.22},
 }
 
+@Article{Allahverdyan2010,
+  author    = {Allahverdyan, A. E. and Ver Steeg, G. and Galstyan, A.},
+  title     = {Community detection with and without prior information},
+  journal   = {Europhysics Letters},
+  year      = {2010},
+  volume    = {90},
+  number    = {1},
+  pages     = {18002},
+  doi       = {10.1209/0295-5075/90/18002},
+  file      = {:Community detection with and without prior information.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.07.31},
+}
+
 @Article{Almendral2010,
   author        = {Almendral, J. A. and Leyva, I. and Li, D. and Sendiña–Nadal, I. and Havlin, S. and Boccaletti, S.},
   title         = {Dynamics of overlapping structures in modular networks},
@@ -1215,6 +1230,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{Asafuddoula2015,
+  author    = {Asafuddoula, M. and Ray, T. and Sarker, R.},
+  title     = {A Decomposition-Based Evolutionary Algorithm for Many Objective Optimization},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2015},
+  volume    = {19},
+  number    = {3},
+  pages     = {445-460},
+  doi       = {10.1109/tevc.2014.2339823},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Aste2005,
@@ -4258,6 +4287,18 @@
   url           = {http://www.ijicic.org/ijicic-14-01008.pdf},
 }
 
+@Article{Chen2015,
+  author    = {Chen, S. and Wang, G. and Jia, W.},
+  title     = {k-FuzzyTrust: Efficient trust computation for large-scale mobile social networks using a fuzzy implicit social graph},
+  journal   = {Information Sciences},
+  year      = {2015},
+  volume    = {318},
+  pages     = {123-143},
+  doi       = {10.1016/j.ins.2014.09.058},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Chen2015h,
   author    = {Chen, J. R. and Wang, H. and Wang, L. N. and Liu, W. W.},
   title     = {A dynamic evolutionary clustering perspective: Community detection in signed networks by reconstructing neighbor sets},
@@ -5218,6 +5259,20 @@
   timestamp = {2017.07.03},
 }
 
+@Article{Deb2014,
+  author    = {Deb, K. and Jain, H.},
+  title     = {An Evolutionary Many-Objective Optimization Algorithm Using Reference-Point-Based Nondominated Sorting Approach, Part I: Solving Problems With Box Constraints},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2014},
+  volume    = {18},
+  number    = {4},
+  pages     = {577-601},
+  doi       = {10.1109/tevc.2013.2281535},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Decelle2011,
   author    = {Decelle, A. and Krzakala, F. and Moore, C. and Zdeborová, L.},
   title     = {Inference and Phase Transitions in the Detection of Modules in Sparse Networks},
@@ -6080,6 +6135,19 @@
   url       = {http://dl.acm.org/citation.cfm?id=1805895},
 }
 
+@InProceedings{Eaton2012,
+  author    = {Eaton, E. and Mansbach, R.},
+  title     = {A Spin-Glass Model for Semi-Supervised Community Detection},
+  booktitle = {26th AAAI Conference on Artificial Intelligence},
+  year      = {2012},
+  pages     = {900-906},
+  file      = {:A Spin-Glass Model for Semi-Supervised Community Detection.pdf:PDF},
+  groups    = {Potts Model CD, Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.07.31},
+  url       = {http://www.aaai.org/ocs/index.php/AAAI/AAAI12/paper/viewFile/5160/5498},
+}
+
 @InProceedings{Eberhart1995,
   author    = {Eberhart, R. and Kennedy, J.},
   title     = {A new optimizer using particle swarm theory},
@@ -6693,6 +6761,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.16},
+}
+
+@Article{Ferreira2015a,
+  author    = {Ferreira, L. N. and Zhao, L.},
+  title     = {Time series clustering via community detection in networks},
+  journal   = {Information Sciences},
+  year      = {2015},
+  volume    = {326},
+  pages     = {227-242},
+  doi       = {10.1016/j.ins.2015.07.046},
+  file      = {:Time series clustering via community detection in networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.08.08},
 }
 
 @Article{Festa2002,
@@ -8333,6 +8415,17 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   url       = {http://arizona.openrepository.com/arizona/handle/10150/105081},
 }
 
+@InProceedings{Gu2010,
+  author    = {Gu, F.-Q. and Liu, H.-L.},
+  title     = {A Novel Weight Design in Multi-objective Evolutionary Algorithm},
+  booktitle = {International Conference on Computational Intelligence and Security},
+  year      = {2010},
+  doi       = {10.1109/cis.2010.37},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Gudkov2008,
   author    = {Gudkov, V. and Montealegre, V. and Nussinov, S. and Nussinov, Z.},
   title     = {Community detection in complex networks by dynamical simplex evolution},
@@ -9452,6 +9545,18 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   owner     = {Vincent},
   timestamp = {2017.07.11},
   url       = {https://books.google.fr/books/about/The_Human_Group.html?id=OmZWeLrvPnkC},
+}
+
+@InProceedings{Honda2009,
+  author    = {Honda, K. and Notsu, A. and Ichihashi, H.},
+  title     = {Collaborative filtering by sequential extraction of user-item clusters based on structural balancing approach},
+  booktitle = {IEEE International Conference on Fuzzy Systems},
+  year      = {2009},
+  doi       = {10.1109/fuzzy.2009.5277251},
+  file      = {:Collaborative filtering by sequential extraction of user-item clusters based on structural balancing approach.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Honey2009,
@@ -11577,6 +11682,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.30},
 }
 
+@Article{Krackhardt1999,
+  author    = {Krackhardt , D. and Kilduff, M.},
+  title     = {Whether close or far: social distance effects on perceived balance in friendship networks},
+  journal   = {Journal of Personality and Social Psychology},
+  year      = {1999},
+  volume    = {76},
+  number    = {5},
+  pages     = {770-782},
+  doi       = {10.1037/0022-3514.76.5.770},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Krapivsky2002,
   author    = {Krapivsky, P. L. and Redner, S.},
   title     = {A statistical physics perspective on Web growth},
@@ -13053,7 +13172,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1371/journal.pone.0178046},
   file          = {:An efficient semi-supervised community detection framework in social networks.pdf:PDF},
-  groups        = {Graph Partitioning, _To do},
+  groups        = {Graph Partitioning, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.05.30},
 }
@@ -13240,6 +13359,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.04.22},
+}
+
+@Article{Lin2015a,
+  author    = {Lin, C.-C. and Kang, J.-R. and Chen, J.-Y.},
+  title     = {An integer programming approach and visual analysis for detecting hierarchical community structures in social networks},
+  journal   = {Information Sciences},
+  year      = {2015},
+  volume    = {299},
+  pages     = {296-311},
+  doi       = {10.1016/j.ins.2014.12.009},
+  file      = {:An integer programming approach and visual analysis for detecting hierarchical community structures in social networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Liu2008,
@@ -14466,6 +14599,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://www.elsevier.com/books/random-matrices/lal-mehta/978-0-12-088409-4},
 }
 
+@Article{Mei2011,
+  author    = {Mei, Y. and Tang, K. and Yao, X.},
+  title     = {Decomposition-Based Memetic Algorithm for Multiobjective Capacitated Arc Routing Problem},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2011},
+  volume    = {15},
+  number    = {2},
+  pages     = {151-165},
+  doi       = {10.1109/tevc.2010.2051446},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @InCollection{Meil2003,
   author    = {Meilă, M.},
   title     = {Comparing Clusterings by the Variation of Information},
@@ -15135,6 +15282,20 @@ old title: The map equation and the resolution limit in community detection},
   groups        = {Graph Partitioning, Found},
   owner         = {Vincent},
   timestamp     = {2017.05.11},
+}
+
+@Article{Muchnik2013,
+  author    = {Muchnik, L. and Aral, S. and Taylor, S. J.},
+  title     = {Social Influence Bias: A Randomized Experiment},
+  journal   = {Science},
+  year      = {2013},
+  volume    = {341},
+  number    = {6146},
+  pages     = {647-651},
+  doi       = {10.1126/science.1240466},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @InProceedings{Mukherjee2016,
@@ -16989,6 +17150,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2012.04.11},
 }
 
+@Article{Qi2014,
+  author    = {Qi, Y. and Ma, X. and Liu, F. and Jiao, L. and Sun, J. and Wu, J.},
+  title     = {MOEA/D with Adaptive Weight Adjustment},
+  journal   = {Evolutionary Computation},
+  year      = {2014},
+  volume    = {22},
+  number    = {2},
+  pages     = {231-264},
+  doi       = {10.1162/evco_a_00109},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Qi2016,
   author    = {Qi, X. Q. and Luo, R. and Fuller, E. and Luo, R. and Zhang, C.-Q.},
   title     = {Signed quasi-clique merger: A new clustering method for signed networks with positive and negative edges},
@@ -17029,6 +17204,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.14},
+}
+
+@InProceedings{Qian2013b,
+  author    = {Qian, Y. and Adali, S.},
+  title     = {Extended structural balance theory for modeling trust in social networks},
+  booktitle = {11th Annual Conference on Privacy, Security and Trust},
+  year      = {2013},
+  doi       = {10.1109/pst.2013.6596064},
+  file      = {:Extended structural balance theory for modeling trust in social networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Qu2015,
@@ -18212,6 +18398,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.01},
 }
 
+@Article{Shafiq2015,
+  author    = {Shafiq, O. and Alhajj, R. and Rokne, J. G.},
+  title     = {On personalizing Web search using social network analysis},
+  journal   = {Information Sciences},
+  year      = {2015},
+  volume    = {314},
+  pages     = {55-76},
+  doi       = {10.1016/j.ins.2015.02.029},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @InProceedings{Shahriari2015,
   author    = {Shahriari, M. and Krott, S. and Klamma, R.},
   title     = {Disassortative Degree Mixing and Information Diffusion for Overlapping Community Detection in Social Networks (DMID)},
@@ -18329,6 +18528,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.10},
+}
+
+@Article{Shang2014,
+  author    = {Shang, R. and Wang, Y. and Wang, J. and Jiao, L. and Wang, S. and Qi, L.},
+  title     = {A multi-population cooperative coevolutionary algorithm for multi-objective capacitated arc routing problem},
+  journal   = {Information Sciences},
+  year      = {2014},
+  volume    = {277},
+  pages     = {609-642},
+  doi       = {10.1016/j.ins.2014.03.008},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Shang2014b,
@@ -18468,6 +18680,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.12},
+}
+
+@Article{Shelokar2013,
+  author    = {Shelokar, P. and Quirin, A. and Cordon, O.},
+  title     = {A multiobjective evolutionary programming framework for graph-based data mining},
+  journal   = {Information Sciences},
+  year      = {2013},
+  volume    = {237},
+  pages     = {118-136},
+  doi       = {10.1016/j.ins.2013.02.014},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Shen2009,
@@ -20399,6 +20624,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.08.12},
 }
 
+@Article{Valente2012,
+  author    = {Valente, T. W.},
+  title     = {Network Interventions},
+  journal   = {Science},
+  year      = {2012},
+  volume    = {337},
+  number    = {6090},
+  pages     = {49-53},
+  doi       = {10.1126/science.1217330},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Valls1998,
   author    = {Valls, V. and Perez, M. A. and Sacramento Quintanilla, M.},
   title     = {Pre-processing techniques for resource allocation in the heterogeneous case},
@@ -20577,6 +20816,21 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.22},
+}
+
+@Article{VerSteeg2011,
+  author    = {Ver Steeg, G. and Galstyan, A. and Allahverdyan, A. E.},
+  title     = {Statistical mechanics of semi-supervised clustering in sparse graphs},
+  journal   = {Journal of Statistical Mechanics},
+  year      = {2011},
+  volume    = {2011},
+  number    = {08},
+  pages     = {P08009},
+  doi       = {10.1088/1742-5468/2011/08/p08009},
+  file      = {:Statistical mechanics of semi-supervised clustering in sparse graphs.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Vicente2008,
@@ -20892,6 +21146,35 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.22},
+}
+
+@InProceedings{Wang2015b,
+  author    = {Wang, Z. and Wang, W. and Xue, G. and Jiao, P. and Li, X.},
+  title     = {Semi-supervised Community Detection Framework Based on Non-negative Factorization Using Individual Labels},
+  booktitle = {International Conference in Swarm Intelligence},
+  year      = {2015},
+  volume    = {9141},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {349-359},
+  doi       = {10.1007/978-3-319-20472-7_38},
+  file      = {:Semi-supervised Community Detection Framework Based on Non-negative Factorization Using Individual Labels.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.06.08},
+}
+
+@Article{Wang2016,
+  author    = {Wang, Z. and Zhang, Q. and Zhou, A. and Gong, M. and Jiao, L.},
+  title     = {Adaptive Replacement Strategies for MOEA/D},
+  journal   = {IEEE Transactions on Cybernetics},
+  year      = {2016},
+  volume    = {46},
+  number    = {2},
+  pages     = {474-486},
+  doi       = {10.1109/tcyb.2015.2403849},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Ward1963,
@@ -21719,6 +22002,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2014.12.23},
 }
 
+@Article{Yan2015,
+  author    = {Yan, S.-R. and Zheng, X.-L. and Wang, Y. and Song, W. W. and Zhang, W.-Y.},
+  title     = {A graph-based comprehensive reputation model: Exploiting the social context of opinions to enhance trust in social commerce},
+  journal   = {Information Sciences},
+  year      = {2015},
+  volume    = {318},
+  pages     = {51-72},
+  doi       = {10.1016/j.ins.2014.09.036},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
+}
+
 @Article{Yang2004,
   author    = {Yang, M.-S. and Wu, K.-L.},
   title     = {A similarity-based robust clustering method},
@@ -21885,6 +22181,21 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{Yang2015,
+  author    = {Yang, L. and Cao, X. and Jin, D. and Wang, X. and Meng, D.},
+  title     = {A Unified Semi-Supervised Community Detection Framework Using Latent Space Graph Regularization},
+  journal   = {IEEE Transactions on Cybernetics},
+  year      = {2015},
+  volume    = {45},
+  number    = {11},
+  pages     = {2585-2598},
+  doi       = {10.1109/TCYB.2014.2377154},
+  file      = {:A Unified Semi-Supervised Community Detection Framework Using Latent Space Graph Regularization.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.12.25},
 }
 
 @InProceedings{Yang2015f,
@@ -22109,6 +22420,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.16},
+}
+
+@Article{Yu2015,
+  author    = {Yu, Z. and Wang, C. and Bu, J. and Wang, X. and Wu, Y. and Chen, C.},
+  title     = {Friend recommendation with content spread enhancement in social networks},
+  journal   = {Information Sciences},
+  year      = {2015},
+  volume    = {309},
+  pages     = {102-118},
+  doi       = {10.1016/j.ins.2015.03.012},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.23},
 }
 
 @Article{Zachary1977,
@@ -22462,6 +22786,36 @@ old title: The map equation and the resolution limit in community detection},
   groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.11},
+}
+
+@Article{Zhang2013a,
+  author    = {Zhang, Z.-Y.},
+  title     = {Community structure detection in complex networks with partial background information},
+  journal   = {Europhysics Letters},
+  year      = {2013},
+  volume    = {101},
+  number    = {4},
+  pages     = {48005},
+  doi       = {10.1209/0295-5075/101/48005},
+  file      = {:Community structure detection in complex networks with partial background information.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2013.03.12},
+}
+
+@Article{Zhang2013e,
+  author    = {Zhang, Z.-Y. and Sun, K.-D. and Wang, S.-Q.},
+  title     = {Enhanced Community Structure Detection in Complex Networks with Partial Background Information},
+  journal   = {Scientific Reports},
+  year      = {2013},
+  volume    = {3},
+  pages     = {3241},
+  doi       = {10.1038/srep03241},
+  file      = {:Enhanced Community Structure Detection in Complex Networks with Partial Background Information.pdf:PDF},
+  groups    = {Semi-Supervised, Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  review    = {arXiv link: http://arxiv.org/abs/1210.2473},
+  timestamp = {2013.07.17},
 }
 
 @Article{Zhang2013r,
